[tool.poetry]
name = "tcpchan"
version = "0.1.1"
description = "tcpchan is a TCP (de)multiplexer"
authors = ["Frank Chang <frank@csie.io>"]
license = "BSD-3-Clause"
repository = "https://github.com/frankurcrazy/tcpchan"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
readme = "README.md"
keywords=["tcp", "multiplexer", "mux", "stream", "channel"]

[tool.poetry.dependencies]
python = "^3.7"
fpack = ">=1.0.0"

[tool.poetry.dev-dependencies]
python-semantic-release = ">=7.2.0"
coverage = "^5.3"
black = "^20.8b1"
isort = "^5.5.2"
pre-commit = "^2.7.1"

[tool.semantic_release]
version_variable = "tcpchan/__init__.py:__version__,pyproject.toml:version"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "poetry"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
